--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "daisyui": "^5.0.43"
     }
 }
