--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/vite": "^4.1.4",
         "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.2",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
+        "daisyui": "^5.0.43",
         "laravel-vite-plugin": "^1.2.0",
-        "postcss": "^8.4.31",
-        "tailwindcss": "^3.1.0",
+        "postcss": "^8.5.4",
+        "tailwindcss": "^3.4.17",
         "vite": "^6.2.4"
-    },
-    "dependencies": {
-        "daisyui": "^5.0.43"
     }
 }
